# udacity-catalog

./: .gitignore  Dockerfile  README.md  get_udacity_catalog.py  interactive_notebook-first-attempt.ipynb  interactive_notebook-second-attempt-working.ipynb  requirements.txt
fastapi/: Dockerfile  Pipfile  catalog-udacity.json  main.py  pyproject.toml  udacity.py
