[tool.poetry]
name = "udacity-fastapi"
version = "0.1.0"
description = "fastapi based server"
authors = ["Johannes Giorgis <johannesgiorgis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
beautifulsoup4 = "^4.9.1"
selenium = "^3.141.0"
tinydb = "^4.1.1"

[tool.poetry.dev-dependencies]
bpython = "^0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
